--- a/ejercicio1/style.css
+++ b/ejercicio1/style.css
@@ -1,93 +1,102 @@
 * {
-    margin: 0;
     padding: 0;
+    margin: 0;
 }
 
-
+html,
 body {
-
+    width: 100%;
+    height: 100%;
 }
 
+main {
+    height: 100%;
+    width: 100%;
+    background-color: rgb(149, 149, 149);
+}
 
-.header {
-    background-color: brown;
-    padding: 15px 20px;
+header.header {
+    background-color: rgb(199, 199, 199);
+    height: 10%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0 20px;
 }
 
 .logo-container {
-    background-color: bisque;
-    width: 280px;
-    height: 60px;
+    background-color: rgb(86, 86, 86);
+    width: 30%;
+    height: 70%;
 }
 
 .menu-container {
-    background-color: bisque;
-    width: 50px;
-    height: 50px;
+    background-color: rgb(101, 101, 101);
+    width: 5%;
+    height: 70%;
 }
 
 .main-section {
+    height: 80%;
     display: flex;
-    gap: 20px;
-    width: 100%;
-    height: 100%;
+    align-items: center;
+}
+
+footer {
+    background-color: rgb(199, 199, 199);
+    height: 10%;
 }
 
 .content-left {
-    background-color: rgb(95, 197, 197);
-    width: 280px;
-    padding: 20px;
+    width: 35%;
+    height: 100%;
+    background-color: rgb(79, 79, 79);
+    margin-right: 20px;
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
-    gap: 20px;
 }
 
 .profile-image-container {
-    background-color: azure;
-    height: 200px;
+    background-color: rgb(130, 240, 255);
+    width: 80%;
+    height: 25%;
+    margin: 15px;
 }
 
 .profile-links-container {
-    background-color: azure;
-    height: 200px;
+    background-color: rgb(0, 225, 255);
+    width: 80%;
+    height: 60%;
+    margin: 15px;
+
 }
 
 .content-mid {
-    width: 75%;
+    background-color: rgb(179, 179, 179);
+    width: 50%;
+    height: 70%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-left: 5%;
+    margin-bottom: 30px;
 }
 
-.content-container {
-    background-color: #e0e0e0;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-}
-
-.content-mid-header {
+header.content-mid-header {
+    background-color: black;
+    height: 15%;
     width: 100%;
-    height: 60px;
-    background: #4b4646;
 }
 
-.content {
+.content{
     display: flex;
+    height: 80%;
+    width: 100%;
     align-items: center;
-    justify-content: center;
-    padding: 80px 40px;
+    text-align: center;
+    font-size: 13px;
 }
 
-.content p {
-    text-align: center;
-}
-
-.footer {
-    background-color: blue;
-    padding: 30px;
-    text-align: center;
+p{
+    margin-bottom: 50px;
 }
